successfully implemented scroll header with fragment!!!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="txt_other">Other</string>
     <string name="txt_yo_yo">Yo Yo</string>
     <string name="title_activity_code_lab">CodeLabActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
